# elffile2

./: .gitignore  .hgignore  GNUmakefile  LICENSE  MANIFEST.in  NEWS  README  README.rst  cheat.el  elffile.py  objcmp.py  objdump.py  setup.cfg  setup.py  tests.py  tst.py
docs/: Makefile
docs/source/: architecture.rst  conf.py  index.rst  quickstart.rst  rationale.rst  reference.rst
testfiles/: Makefile.am  Makefile.in  README  a.c  b.c  c.c  configure  configure.ac  d.c  dynamic.h  e.c  f.c  hello.c  static.h
testfiles/i686-pc-linux-gnu/: hello
testfiles/i686-pc-linux-gnu/.libs/: hello  libdynamic.so.0  libdynamic.so.0.0.0  libstatic.so.0.0.0
testfiles/x86_64-unknown-linux-gnu/: hello
testfiles/x86_64-unknown-linux-gnu/.libs/: hello  libdynamic.so.0.0.0  libstatic.so.0.0.0
