# Process this file with autoconf to produce a configure script.
# This file is in the public domain.
AC_INIT(testfile, 0.0)
AC_PREREQ([2.67])
AC_COPYRIGHT([None])
AC_CONFIG_SRCDIR([README])
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile:Makefile.in])
AC_OUTPUT
